--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   }
 }
