--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "repository": "https://github.com/augustoOliveira-1993/estudo-ignite.git",
   "author": "augustoOliveira-1993 <augusto.oliveira_2@hotmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+  },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/uuid": "^8.3.4",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4",
+    "uuid": "^9.0.0"
   }
 }
